# Object-oriented-analysis-and-design-2

lab01/: OOAD-2_Lab-1.drawio1.xml  README.md
lab02/: Facade.xml  README.md
lab02/notification_facade_gui/: CMakeLists.txt  CMakePresets.json  build-ucrt64.ps1  main.cpp  mainwindow.cpp  mainwindow.h
lab02/notification_facade_gui/include/: notification_facade.h  push_service.h  sms_service.h  validator.h
lab02/notification_facade_gui/src/: email_service.cpp  notification_facade.cpp  notification_logger.cpp  push_service.cpp  sms_service.cpp
lab02/notification_no_facade/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
lab02/notification_no_facade/include/: email_service.h  notification_logger.h
lab02/notification_no_facade/src/: validator.cpp
lab03/: README.md
lab03/lab3_iterator/: README.md  iterator_pattern.drawio.xml  main.py
lab03/lab3_iterator/social_lab/: __init__.py  gui.py  iterator_pattern.py  models.py  point_space.py
lab03/lab3_without_iterator/: README.md  main.py
lab03/lab3_without_iterator/social_lab_no_iterator/: __init__.py  gui.py  models.py  point_space.py
lab04/WarehouseOptimizer/: README.md
lab04/WarehouseOptimizer/src/with_pattern/: Order.java  ShelfPoint.java  WarehouseGui.java
lab04/WarehouseOptimizer/src/without_pattern/: Order.java  WarehouseGui.java
